fix blog posts on tablet layout

--- a/app/news/[slug]/page.module.css
+++ b/app/news/[slug]/page.module.css
@@ -51,7 +51,7 @@
     letter-spacing: 1px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
 
     .article h2 {
         padding-top: 5vh;
